--- a/src/main/resources/static/web/productdetails.html
+++ b/src/main/resources/static/web/productdetails.html
@@ -198,7 +198,7 @@
             <div class="row">
                 <div class="col-md-5 d-flex justify-center productImage">
 
-                    <img :src="productId.urlImg" class="d-block w-80" alt="...">
+                    <img :src="productId.urlImg" class="d-block w-100 object-contain" alt="...">
 
 
                 </div>
