--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -8,13 +8,26 @@
 	<link rel="stylesheet" href="./assets/css/loginandsignup.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
-	<link rel="shortcut icon" href="assets/images/favicon-16x16.png" type="image/png">
+	<link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/png">
 	<script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-	<title>Document</title>
+	<title>Login | Balcam's Gym</title>
 </head>
 
-<body id="app">
+<body id="app" class="relative">
+	<div class="w-screen h-screen flex justify-center items-center absolute z-50 bg-gray-700/50">
+		<div class="bg-gray-900 h-[300px] w-[400px] rounded shadow flex flex-col justify-center items-center gap-5">
+			<div class="flex flex-row relative items-center justify-center">
+				<i class="uil uil-check text-2xl absolute text-green-700 right-[45px]"></i>				
+				<h3 class="text-white">Done!</h3>
+			</div>
+			<div class="flex flex-col justify-center items-center">
+				<h2 class="text-xl font-bold text-white">One last thing!</h2>
+				<p class="text-xl font-thin text-white text-center">Check out your inbox in: <span>{{email}}</span></p>
+			</div>
+			<button class="py-2 px-5 bg-yellow-500 rounded text-black font-black shadow">OK</button>
+		</div>
+	</div>
 	<div class="section bg-login">
 		<div class="container">
 			<div class="row full-height justify-content-center">
